# http-server

./: .rustfmt.toml  Cargo.toml  README  http-srv.1  index.html  lol.html
.github/workflows/: release.yml
crates/client/: Cargo.toml  README
crates/client/src/: config.rs  lib.rs  main.rs
crates/html/: Cargo.toml
crates/html/src/: builder.rs  lib.rs  node.rs
crates/html/tests/: test.rs
crates/http/: Cargo.toml  README
crates/http/src/: error.rs  lib.rs  method.rs  status.rs  stream.rs
crates/http/src/encoding/: chunked.rs  mod.rs  stream.rs
crates/http/src/request/: builder.rs  mod.rs  parse.rs  test.rs
crates/http/src/request/handler/: auth.rs  mod.rs
crates/http/src/response/: builder.rs  mod.rs  parse.rs  test.rs
crates/mime/: Cargo.toml  README
crates/mime/src/: lib.rs
crates/mime/tests/: test.rs
crates/server/: Cargo.toml  README
crates/server/example-plugin/: Cargo.toml
crates/server/example-plugin/src/: lib.rs
crates/server/src/: config.rs  lib.rs  log.rs  main.rs
crates/server/src/handler/: auth.rs  indexing.rs  mod.rs  ranges.rs
crates/url/: Cargo.toml  README  build.rs
crates/url/benches/: bench.rs
crates/url/src/: decode.rs  encode.rs  ffi.rs
man1/: http-srv.1
src/: config.rs  error.rs  http.rs  lib.rs  log.rs  main.rs  pool.rs  request.rs  server.rs  stream.rs  url.rs
src/base64/: Cargo.toml
src/base64/src/: config.rs  decode.rs  encode.rs  lib.rs  main.rs  reader.rs
src/base64/tests/: decode.rs  encode.rs
src/client/: config.rs  main.rs  mod.rs
src/html/: Cargo.toml  README
src/html/benches/: bench.rs
src/html/src/: builder.rs  lib.rs  node.rs
src/html/tests/: test.rs
src/http/: Cargo.toml  README  method.rs  mod.rs  status.rs  stream.rs
src/http/encoding/: chunked.rs  stream.rs
src/http/src/: error.rs  lib.rs  method.rs  stream.rs
src/http/src/encoding/: stream.rs
src/http/src/request/: mod.rs  parse.rs
src/http/src/request/handler/: auth.rs  indexing.rs  mod.rs
src/mime/: Cargo.toml
src/mime/benches/: bench.rs
src/mime/src/: lib.rs
src/mime/tests/: test.rs
src/pool/: Cargo.toml  error.rs  worker.rs
src/pool/src/: config.rs  error.rs  lib.rs  pool.rs  worker.rs
src/pool/tests/: config_test.rs  pool_tests.rs
src/request/: encoding.rs  handler.rs  method.rs  mod.rs  parse.rs  status.rs  stream.rs  test.rs
src/request/encoding/: chunked.rs  stream.rs
src/request/handler/: auth.rs  indexing.rs  mod.rs  ranges.rs
src/response/: mod.rs  parse.rs
src/server/: config.rs  error.rs  main.rs  mod.rs
src/url/: Cargo.toml  README  build.rs
src/url/benches/: bench.rs
src/url/src/: decode.rs  encode.rs  ffi.rs  lib.rs
src/url/tests/: decode.rs
tests/: request.rs
