[package]
name = "httpcli"
version = "0.5.0"
edition = "2024"
description = "Http client"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
license = "GPL-3.0-only"
repository = "https://github.com/saulvaldelvira/http-server"

[[bin]]
name = "http-client"
path = "src/main.rs"

[dependencies]
http.workspace = true
webpki-roots = { version = "1.0.1", optional = true }

[dependencies.rustls]
version = ">=0.23.28"
optional = true
default-features = false
features = ["std", "aws_lc_rs"]

[features]
default = ["tls"]
tls = ["dep:rustls", "dep:webpki-roots", "http/tls"]
