[package]
name = "http-utils"
version = "0.3.0"
edition = "2024"
description = "Http utils"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
license = "MIT"
readme = "README"

[lib]
name = "http"
path = "src/lib.rs"

[dependencies]
base64 = { package = "rb64", version = ">=0.1.0", git = "https://github.com/saulvaldelvira/rb64" }
url = { package = "url-utils", version = ">=0.1.0", path = "../url" }

[dependencies.builders]
package = "builders"
default-features = false
features = ["builder"]
version = ">=0.1.0"
git = "https://github.com/saulvaldelvira/builders"

