[package]
name = "http-utils"
version = "0.6.0"
edition = "2024"
description = "Http utils"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
license = "GPL-3.0-only"
readme = "README"
repository = "https://github.com/saulvaldelvira/http-server"

[lib]
name = "http"
path = "src/lib.rs"

[dependencies]
base64 = { package = "rb64", version = ">=0.1.0", git = "https://github.com/saulvaldelvira/rb64" }
url = { package = "url-utils", version = ">=0.1.0", path = "../url" }

[dependencies.rustls]
version = "0.23.28"
optional = true
default-features = false
features = ["std"]

[features]
default = []
tls = ["dep:rustls"]
