[package]
name = "http-srv"
description = "Http Server"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
version = "0.8.0"
edition = "2024"
license = "GPL-3.0-only"
readme = "README"
repository = "https://github.com/saulvaldelvira/http-server"

[dependencies]
http.workspace = true
mime = { package = "rmime", version = ">=0.1.0", path = "../mime" }
regexpr = { version = ">=0.3.3", git = "https://github.com/saulvaldelvira/regexpr", optional = true }
pool = { package = "job-pool", version = ">=0.6.0", git = "https://github.com/saulvaldelvira/job-pool" }
jsonrs = { package = "jsonrs", version = ">=0.1.4", git = "https://github.com/saulvaldelvira/json.rs" }
base64 = { package = "rb64", version = ">=0.1.0", git = "https://github.com/saulvaldelvira/rb64" }
url = { package = "url-utils", version = ">=0.1.0", path = "../url" }

[dependencies.rustls]
version = ">=0.23.28"
optional = true
default-features = false
features = ["std", "aws_lc_rs"]

[features]
default = ["full"]
regex = ["dep:regexpr"]
tls = ["dep:rustls", "http/tls"]
full = ["regex", "tls"]
