[package]
name = "url-utils"
description = "Url Encode and Decode"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
version = "0.1.2"
edition = "2021"
license = "MIT"
readme = "README"

[lib]
name = "url"
path = "src/lib.rs"
crate-type = [ "lib", "cdylib", "staticlib" ]

[build-dependencies]
cbindgen = { version = "0.24.0", optional = true }

[features]
default = ["std"]
std = []
bindings = ["dep:cbindgen"]
