[package]
name = "url-utils"
description = "Url Encode and Decode"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-only"
readme = "README"
repository = "https://github.com/saulvaldelvira/http-server"

[lib]
name = "url"
path = "src/lib.rs"
crate-type = [ "lib", "cdylib", "staticlib" ]

[build-dependencies]
cbindgen = { version = ">=0.24.0", optional = true }

[features]
default = ["std"]
std = []
bindings = ["dep:cbindgen"]
