[package]
name = "rhtml"
description = "Html Utils"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
version = "0.1.6"
edition = "2021"
license = "MIT"
readme = "README"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
builders = { version = "0.1.1", git = "https://github.com/saulvaldelvira/builders.git" }
