[package]
name = "job-pool"
description = "Thread Pool"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
version = "0.1.6"
edition = "2021"
license = "MIT"
readme = "README"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
builders = { version = ">=0.1.10", features = ["builder"], git = "https://github.com/saulvaldelvira/builders" }
